@startuml

title __RESOURCES's Class Diagram__\n

  package app.resources {
    interface DAO_STUB {
        {abstract} + loadSerie()
        {abstract} + loadTemporada()
        {abstract} + loadEpisodi()
        {abstract} + loadArtista()
        {abstract} + loadProductora()
        {abstract} + loadAdmin()
        {abstract} + loadClient()
        {abstract} + loadSubscripcio()
        {abstract} + loadVisualització()
        {abstract} + loadValoracio()
    }
  }
  

  package app.resources {
    class DAO_XML_STUB {
        - serie : String
        - temporada : String
        - client : String
        - episodi : String
        - valoracio : String
        - productora : String
        - artista : String
        - subscripcio : String
        - visualitzacio : String
        - users : ArrayList<User>
        + DAO_XML_STUB()
        + obtenirDades()
        + loadSerie()
        + loadTemporada()
        + loadEpisodi()
        + loadArtista()
        + loadProductora()
        + loadValoracio()
        + loadAdmin()
        + loadClient()
        + getCatalog()
        + loadSubscripcio()
        + getUser()
        + loadVisualització()
        + getEpisode()
        + getUsers()
        + getSerie()
        + getTemporada()
        + getClient()
        + getAdmin()
        + getEpisodi()
        + getValoracio()
        + getProductora()
        + getArtista()
        + getSubscripcio()
        + getVisualitzacio()
    }
  }
  

  package app.resources {
    class STUBXMLParser {
        + STUBXMLParser()
        + parse()
        - obtenirSeries()
        - obtenirProductora()
        - obtenirArtistes()
        - obtenirTemporades()
        - obtenirEpisodis()
        - obtenirValoracions()
        - obtenirAdministradors()
        - obtenirClients()
        - obtenirSubcripcions()
        - obtenirVisualitzacions()
    }
  }
  

  DAO_XML_STUB -up-|> DAO_STUB
  DAO_XML_STUB o-- Catalog : catalog
  DAO_XML_STUB o-- Series : sSerie
  DAO_XML_STUB o-- User : user
  STUBXMLParser o-- DAO_XML_STUB : daoXml


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
